--- a/HW_14_1/index.html
+++ b/HW_14_1/index.html
@@ -8,11 +8,16 @@
     <script defer src="./index.js"></script>
   </head>
   <body>
+    <div class="shop">
+      <div id="categories">
 
-    <div class="input-row">
-      <input type="text" id="textField">
-      <div id="infoDiv"></div>
+      </div>
+      <div id="products">
+        
+      </div>
+      <div id="product-info">
+        
+      </div>
     </div>
-
   </body>
 </html>
