--- a/HW_15_2/index.html
+++ b/HW_15_2/index.html
@@ -8,16 +8,11 @@
     <script defer src="./index.js"></script>
   </head>
   <body>
-    <div class="shop">
-      <div id="categories">
-
-      </div>
-      <div id="products">
-        
-      </div>
-      <div id="product-info">
-        
-      </div>
+    <form id="searchForm">
+      <input placeholder="Enter Post ID (1-100)" type="number" id="postId" name="postId" min="1" max="100" required>
+      <button type="submit">Search</button>
+    </form>
+    <div id="postContainer"></div>
     </div>
   </body>
 </html>
