--- a/HW_16_1/index.html
+++ b/HW_16_1/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css" />
     <script defer src="./index.js"></script>
   </head>
   <body>
@@ -34,13 +35,12 @@
       <option value="Chernihiv">Чернігів</option>
       <option value="Chernivtsi">Чернівці</option>
     </select>
-
+    <img id="weatherIcon" src="" />
     <p>Температура: <span id="temp"></span></p>
     <p>Тиск: <span id="pressure"></span></p>
     <p>Опис: <span id="description"></span></p>
     <p>Вологість: <span id="humidity"></span></p>
     <p>Швидкість вітру: <span id="speed"></span></p>
-    <p>напрям у градусах: <span id="deg"></span></p>
-    <img id="weatherIcon" src="" />
+    <p>Напрям у градусах: <span id="deg"></span></p>
   </body>
 </html>
